--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,9 @@ jobs:
         run: '! grep -r -F " " orgs-data'
 
   columns:
-    if: false # reason: https://github.com/nikitastupin/orgs-data/runs/7697192767?check_suite_focus=true
+    # reason: https://github.com/nikitastupin/orgs-data/runs/7697192767?check_suite_focus=true
+    # todo: handle non-GitHub URLs
+    if: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
