--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -92,6 +92,8 @@ jobs:
       AFTER:  ${{ github.event.after  || github.event.pull_request.head.sha }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: before
         run: |
           git checkout "$BEFORE"
