--- a/actions/sort-uniq/action.yml
+++ b/actions/sort-uniq/action.yml
@@ -4,5 +4,5 @@ runs:
   steps:
     - uses: actions/checkout@v3
     - name: check sort and uniq
-      run: ./scripts/workflows/sort-uniq.sh
+      run: "./${{ github.action_path }}/scripts/workflows/sort-uniq.sh"
       shell: bash
