--- a/actions/forget-nothing/action.yml
+++ b/actions/forget-nothing/action.yml
@@ -8,7 +8,7 @@ runs:
     - name: before
       run: |
         git checkout "$BEFORE"
-        ./scripts/all-orgs.sh > /tmp/before
+        "${{ github.action_path }}/../../scripts/all-orgs.sh" > /tmp/before
       shell: bash
       env:
         BEFORE: ${{ github.event.pull_request.base.sha || github.event.before }}
